公有云管理

--- a/styles/antd/button.styl
+++ b/styles/antd/button.styl
@@ -10,3 +10,7 @@
     &:hover, &:focus
       border-color $link-hover-color
       background $link-hover-color
+
+  &-sm
+    font-size $font-size-sm
+    border-radius $border-radius-sm
