--- a/styles/antd.less
+++ b/styles/antd.less
@@ -1,6 +1,8 @@
+@import '~antd/es/alert/style/index.less';
 @import '~antd/es/avatar/style/index.less';
 @import '~antd/es/breadcrumb/style/index.less';
 @import '~antd/es/button/style/index.less';
+@import '~antd/es/card/style/index.less';
 @import '~antd/es/checkbox/style/index.less';
 @import '~antd/es/date-picker/style/index.less';
 @import '~antd/es/dropdown/style/index.less';
@@ -15,7 +17,9 @@
 @import '~antd/es/popover/style/index.less';
 @import '~antd/es/radio/style/index.less';
 @import '~antd/es/select/style/index.less';
+@import '~antd/es/spin/style/index.less';
 @import '~antd/es/switch/style/index.less';
+@import '~antd/es/table/style/index.less';
 @import '~antd/es/tooltip/style/index.less';
 @import '~antd/es/upload/style/index.less';
 @import '~antd/es/notification/style/index.less';
