--- a/styles/variable/index.less
+++ b/styles/variable/index.less
@@ -552,11 +552,11 @@
 
 // Pagination
 // ---
-// @pagination-item-size: 32px;
+@pagination-item-size: 28px;
 // @pagination-item-size-sm: 24px;
 // @pagination-font-family: Arial;
-// @pagination-font-weight-active: 500;
-// @pagination-item-bg-active: @component-background;
+@pagination-font-weight-active: normal;
+@pagination-item-bg-active: @primary-color;
 
 // PageHeader
 // ---
