--- a/styles/antd/form.styl
+++ b/styles/antd/form.styl
@@ -60,7 +60,11 @@
       &-explain
         margin-bottom -2px
 
-//   &-inline
+  &-inline
 
-//     .ant-input, .ant-select
-//       width 205px
+    .ant-input, .ant-select
+      width 225px
+
+    .ant-calendar-picker
+      &-input
+        width 555px
