--- a/styles/antd/popover.styl
+++ b/styles/antd/popover.styl
@@ -4,3 +4,7 @@
   &-inner-content
     padding $padding-sm
     line-height $line-height
+
+    .popover-detail--title
+      padding-right 4px
+      color $heading-color
