--- a/styles/antd/select.styl
+++ b/styles/antd/select.styl
@@ -1,22 +1,18 @@
-// form
-//   .ant-select
-//     width 330px
+form
+  .ant-select
+    width 330px
 
-// .ant-select
-//   width 330px
-//   font-size $font-size-sm
-
-//   &-selection
-//     box-shadow none !important
+.ant-select
+  width 330px
+  font-size $font-size-sm
 
 .ant-select-dropdown-menu
   font-size $font-size-sm
 
-  // &-item
+  &-item
+    &:not(.ant-select-dropdown-menu-item-disabled):hover
+      color $white
+      background-color $primary-color
 
-    // &:not(.ant-select-dropdown-menu-item-disabled):hover
-    //   color #fff !important
-    //   background $primary-color !important
-
-    // &-active:not(.ant-select-dropdown-menu-item-disabled)
-    //   background $background-color-light
+    .ant-empty
+      text-align center
