--- a/styles/main.styl
+++ b/styles/main.styl
@@ -23,6 +23,12 @@ table
   &-default
     color $gray
 
+  &-orange
+    color $orange
+
+  &-primary
+    color $primary-color
+
 #__next
   height 100%
 
