--- a/styles/special/header.styl
+++ b/styles/special/header.styl
@@ -40,13 +40,7 @@
       &-item
         padding 9px 20px
         min-width 150px
-
-        &:hover
-          color $white
-          background $primary-color
-
-          a
-            color $white
+        font-size $font-size-base
 
         a
           margin 0
