--- a/components/filter-form.pug
+++ b/components/filter-form.pug
@@ -1,5 +1,5 @@
 .filter-form
   SimpleForm(_ref=form states=props.states onSubmit=props.onSubmit layout="inline")
-  .margin-bottom_20
+  .filter-form-buttons
     Button.secondary-primary(onClick=form.submit) 查询
     Button(type="default" onClick=resetFields) 清空
