--- a/styles/antd.less
+++ b/styles/antd.less
@@ -20,6 +20,7 @@
 @import '~antd/es/spin/style/index.less';
 @import '~antd/es/switch/style/index.less';
 @import '~antd/es/table/style/index.less';
+@import '~antd/es/tag/style/index.less';
 @import '~antd/es/tooltip/style/index.less';
 @import '~antd/es/upload/style/index.less';
 @import '~antd/es/notification/style/index.less';
