--- a/styles/component/table.styl
+++ b/styles/component/table.styl
@@ -12,7 +12,7 @@
     &-tbody
       tr:last-child
         td
-          border none
+          border-width 0
 
   .ant-table-pagination
     margin 80px -20px -20px 0
