--- a/styles/antd/radio.styl
+++ b/styles/antd/radio.styl
@@ -11,3 +11,6 @@
 
       &:not(.ant-radio-button-wrapper-disabled)
         background rgba($primary-color, .1)
+
+        &:focus-within
+          outline none
