--- a/styles/antd.less
+++ b/styles/antd.less
@@ -4,6 +4,7 @@
 @import '~antd/es/button/style/index.less';
 @import '~antd/es/card/style/index.less';
 @import '~antd/es/carousel/style/index.less';
+@import '~antd/es/cascader/style/index.less';
 @import '~antd/es/checkbox/style/index.less';
 @import '~antd/es/date-picker/style/index.less';
 @import '~antd/es/dropdown/style/index.less';
