--- a/styles/variable/index.less
+++ b/styles/variable/index.less
@@ -18,7 +18,7 @@
 
 // Color used by default to control hover and active backgrounds and for
 // alert info backgrounds.
-// @primary-1: color(~`colorPalette('@{primary-color}', 1) `); // replace tint(@primary-color, 90%)
+@primary-1: fade(@primary-color, 5%); // replace tint(@primary-color, 90%)
 // @primary-2: color(~`colorPalette('@{primary-color}', 2) `); // replace tint(@primary-color, 80%)
 // @primary-3: color(~`colorPalette('@{primary-color}', 3) `); // unused
 // @primary-4: color(~`colorPalette('@{primary-color}', 4) `); // unused
@@ -118,8 +118,8 @@
 // @outline-width: 2px;
 // @outline-color: @primary-color;
 
-// @background-color-light: hsv(0, 0, 98%); // background of header and selected item
-// @background-color-base: hsv(0, 0, 96%); // Default grey background color
+// @background-color-light: hsv(0, 0, 98%); // background of header and selected item #fafafa
+// @background-color-base: hsv(0, 0, 96%); // Default grey background color #f5f5f5
 
 // Disabled states
 // @disabled-color: fade(#000, 25%);
@@ -343,9 +343,9 @@
 // Tooltip max width
 // @tooltip-max-width: 250px;
 // Tooltip text color
-// @tooltip-color: #fff;
+@tooltip-color: @text-color-secondary;
 // Tooltip background color
-// @tooltip-bg: rgba(0, 0, 0, 0.75);
+@tooltip-bg: #fff;
 // Tooltip arrow width
 // @tooltip-arrow-width: 5px;
 // Tooltip distance with trigger
