--- a/styles/antd.less
+++ b/styles/antd.less
@@ -3,9 +3,11 @@
 @import '~antd/es/breadcrumb/style/index.less';
 @import '~antd/es/button/style/index.less';
 @import '~antd/es/card/style/index.less';
+@import '~antd/es/carousel/style/index.less';
 @import '~antd/es/checkbox/style/index.less';
 @import '~antd/es/date-picker/style/index.less';
 @import '~antd/es/dropdown/style/index.less';
+@import '~antd/es/empty/style/index.less';
 @import '~antd/es/form/style/index.less';
 @import '~antd/es/icon/style/index.less';
 @import '~antd/es/input/style/index.less';
