--- a/styles/special/cloud.styl
+++ b/styles/special/cloud.styl
@@ -11,7 +11,7 @@
       & + .ant-btn
         margin-left 18px
 
-      &:hover, &:focus
+      &:hover, &:focus, &-selected
         color $primary-color
         border-color $primary-color
 
