添加，修改发票

--- a/components/upload-picture.pug
+++ b/components/upload-picture.pug
@@ -14,7 +14,7 @@
     UploadList(
       items=[ state.file ]
       listType="picture-card"
-      showPreviewIcon=false
+      showPreviewIcon=true
       showRemoveIcon=true
       onRemove=removeUpload
       locale=uploadLocale
