--- a/styles/special/detail.styl
+++ b/styles/special/detail.styl
@@ -16,3 +16,8 @@
     &-header
       padding 20px 0
       color $heading-color
+
+  &-error
+    margin -8px 0 12px
+    font-size $font-size-sm
+    color $red
