--- a/styles/special/detail.styl
+++ b/styles/special/detail.styl
@@ -1,5 +1,6 @@
 .detail
   &-header
+    margin-bottom 20px
     min-height 86px
     border-bottom 1px solid $border-color-split
 
@@ -14,7 +15,7 @@
 
   &-body
     &-header
-      padding 20px 0
+      padding-bottom 20px
       color $heading-color
 
   &-error
