--- a/components/upload-pictures.pug
+++ b/components/upload-pictures.pug
@@ -5,7 +5,7 @@
       | 上传附件
     | (仅支持 jpg/jpeg/png，小于 3MB)
 
-  Upload(fileList=state.files accept="image/jpeg, image/png" multiple type="drag" listType="picture-card" beforeUpload=beforeUpload onPreview=previewFile onRemove=removeFile showUploadList=(!disabled ? true : hideRemoveIcon) disabled=(state.disabled || state.files.length >= limit))
+  Upload.clear-fix(fileList=state.files accept="image/jpeg, image/png" multiple type="drag" listType="picture-card" beforeUpload=beforeUpload onPreview=previewFile onRemove=removeFile showUploadList=(!disabled ? true : hideRemoveIcon) disabled=(state.disabled || state.files.length >= limit))
     Icon(type="plus")
     br
     | 点此或拖拽上传附件
