--- a/styles/variable/index.less
+++ b/styles/variable/index.less
@@ -62,7 +62,7 @@
 // @heading-3-size: ceil(@font-size-base * 1.71);
 // @heading-4-size: ceil(@font-size-base * 1.42);
 // @line-height-base: 1.5;
-// @border-radius-base: 4px;
+@border-radius-base: 4px;
 // @border-radius-sm: 2px;
 
 // vertical paddings
@@ -487,7 +487,7 @@
 // @card-skeleton-bg: #cfd8dc;
 // @card-background: @component-background;
 // @card-shadow: 0 2px 8px rgba(0, 0, 0, 0.09);
-// @card-radius: @border-radius-sm;
+@card-radius: @border-radius-base;
 
 // Comment
 // ---
