--- a/pages/cloud/index.pug
+++ b/pages/cloud/index.pug
@@ -3,6 +3,8 @@ Document-Title 账号管理 - 公有云管理
 SiteLayout
 
   Card.card-common(title="账号管理")
+    Card:extra
+      a(onClick=updateData) 数据更新
     .cloud--buttons
       each cloud in CLOUD_VENDORS
         Button(key=cloud.provider class-ant-btn-selected=cloud.selected disabled=cloud.disabled onClick=(() => createEndpoint(cloud.provider)))
