--- a/styles/special/layout.styl
+++ b/styles/special/layout.styl
@@ -5,3 +5,9 @@
 .layout
   &--wrapper
     base-width $width
+
+  &--title
+    padding 32px 0
+    font-size 20px
+    color $heading-color
+    text-align center
