--- a/styles/main.styl
+++ b/styles/main.styl
@@ -82,6 +82,10 @@ base-width(width)
   display flex
   justify-content space-between
 
+.flex-between-center
+  @extend .flex-between
+  align-items center
+
 .flex-align-center
   display flex
   align-items center
