增加页面底部信息

--- a/components/layout.pug
+++ b/components/layout.pug
@@ -6,3 +6,6 @@ Layout
     .layout--wrapper
       NavMenu
       = props.children
+
+  Layout-Footer
+    .align-center Copyright © 2020 上海云权科技有限公司 All Rights Reserved.
